# ElectronicDataClinica

./: Cargo.toml  Dockerfile  README.md
apps/application/: Cargo.toml
apps/domain/: Cargo.toml
apps/infrastructure/: Cargo.toml
src/: consts.rs  main.rs
src/identity/: handlers.rs  routers.rs
src/identity/handlers/: login_handler.rs
